--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "displayName": "Uncrustify",
     "description": "Code format using uncrustify",
     "version": "3.1.0",
-    "publisher": "zachflower",
+    "publisher": "benjarvis",
     "license": "MIT",
-    "homepage": "https://github.com/zachflower/vscode-uncrustify",
+    "homepage": "https://github.com/benjarvis/vscode-uncrustify",
     "icon": "images/uncrustify.png",
     "galleryBanner": {
         "color": "#1F1F1F",
@@ -13,10 +13,10 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/zachflower/vscode-uncrustify.git"
+        "url": "https://github.com/benjarvis/vscode-uncrustify.git"
     },
     "bugs": {
-        "url": "https://github.com/zachflower/vscode-uncrustify/issues"
+        "url": "https://github.com/benjarvis/vscode-uncrustify/issues"
     },
     "engines": {
         "vscode": "^1.47.0"
