--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "uncrustify",
     "displayName": "Uncrustify",
     "description": "Code format using uncrustify",
-    "version": "3.1.0",
+    "version": "3.1.2",
     "publisher": "benjarvis",
     "license": "MIT",
     "homepage": "https://github.com/benjarvis/vscode-uncrustify",
@@ -34,7 +34,7 @@
     "activationEvents": [
         "*"
     ],
-    "main": "./out/extension",
+    "main": "./out/extension.js",
     "contributes": {
         "configuration": {
             "title": "Uncrustify",
@@ -144,7 +144,9 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
+        "compile": "webpack --mode production",
+        "webpack": "webpack --mode development",
+        "webpack-dev": "webpack --mode development --watch",
         "lint": "eslint . --ext .ts,.tsx",
         "watch": "tsc -watch -p ./",
         "pretest": "npm run compile",
@@ -152,24 +154,25 @@
     },
     "dependencies": {
         "fs-extra": "^9.1.0",
-        "node": "^12.20.1",
         "temp": "^0.9.4"
     },
     "devDependencies": {
-        "@types/glob": "^7.1.3",
         "@types/fs-extra": "^9.0.7",
+        "@types/glob": "^7.1.3",
         "@types/mocha": "^8.2.0",
         "@types/node": "^12.20.4",
         "@types/temp": "^0.8.34",
         "@types/vscode": "^1.47.0",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
-        "mocha": "^8.2.1",
         "eslint": "^7.1.0",
-        "ts-loader": "^8.0.17",
+        "mocha": "^8.2.1",
+        "ts-loader": "^8.4.0",
         "ts-node": "^8.10.2",
         "typescript": "^4.1.3",
         "vsce": "^1.85.0",
-        "vscode-test": "^1.5.1"
+        "vscode-test": "^1.5.1",
+        "webpack": "^5.100.2",
+        "webpack-cli": "^6.0.1"
     }
 }
